<resources>
    <string name="app_name">EmployeeTracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh_list">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="edit_first_name_hint">Enter your first Name</string>
    <string name="edit_last_name_hint">Enter your last Name</string>
    <string name="edit_email_hint">Enter your email</string>
    <string name="edit_password_hint">Enter password</string>
    <string name="edit_confirm_password_hint">Confirm Password</string>
    <string name="text_reg_form_title">Register User</string>
    <string name="text_register_btn">Register</string>
    <string name="text_login_btn">Login</string>
    <string name="text_back_btn">back</string>

</resources>
